# crouching-dragon-hidden-tiger

./: .env.example  .gitignore  DEVELOP.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/openshell/: gateway.toml
deploy/vllm/: README.md  serve.sh
docs/: DESIGN.md  PLAN.md
docs/redblue-arena/: README.md  docker-compose.reference.yml
docs/site/: README.md  wrangler.toml
docs/site/public/redblue-arena/: index.html  style.css
docs/site/public/redblue-arena/arch/: index.html
docs/site/public/redblue-arena/assets/: README.txt
docs/site/public/redblue-arena/guide/: index.html
docs/site/public/redblue-arena/visual/: index.html
docs/site/public/redblue-arena/wiki/: index.html
orchestrator/: __init__.py  __main__.py  ape.py  config.py  generator.py  harness.py  interfaces.py  loop.py  models.py  policy_store.py  redteam.py  references.py  reporter.py  web.py
orchestrator/backends/: corpus.py  evaluate.py  mock.py  openshell_policy.py  real.py  remediation.py
policies/: baseline.yaml  permissive.yaml
tests/: conftest.py  test_ape.py  test_authored_and_adaptive.py  test_backends_mock.py  test_contract_and_config.py  test_generator.py  test_hiddenlayer.py  test_loop.py  test_models.py  test_observed.py  test_openshell_policy.py  test_policy_store.py  test_reporter_and_cli.py
