[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-security-validation-platform"
version = "0.1.0"
description = "Reproducible AI security lab: OpenShell + HiddenLayer + Nemotron, orchestrated"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

# Installed by default under `uv run` / `uv sync` (no --extra needed).
[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
security-orchestrator = "orchestrator.__main__:main"

[tool.setuptools]
packages = ["orchestrator", "orchestrator.backends"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
