[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crouching-dragon-hidden-tiger"
version = "0.1.0"
description = "Crouching Dragon Hidden Tiger — reproducible AI security lab: OpenShell + HiddenLayer + Nemotron, orchestrated"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

# Installed by default under `uv run` / `uv sync` (no --extra needed).
[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
security-orchestrator = "orchestrator.__main__:main"

[tool.setuptools]
packages = ["orchestrator", "orchestrator.backends"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
# Live-integration seams whose tests are deferred (need real endpoints/creds):
# the vLLM/Nemotron adapter and the ablation harness that drives full runs.
# Excluded so the 90% gate stays a meaningful floor on the tested core.
omit = [
    "orchestrator/backends/real.py",
    "orchestrator/harness.py",
]
