[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crouching-dragon-hidden-tiger"
version = "0.1.0"
description = "Crouching Dragon Hidden Tiger — reproducible AI security lab: OpenShell + HiddenLayer + Nemotron, orchestrated"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]
hiddenlayer = [
    "hiddenlayer-sdk>=3.8.0",
]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "docker>=7",           # web UI launches each run as a sibling container
]

# Installed by default under `uv run` / `uv sync` (no --extra needed).
[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
security-orchestrator = "orchestrator.__main__:main"

[tool.setuptools]
packages = ["orchestrator", "orchestrator.backends"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
